# notion-mealplan

./: README.md  mp_functions.py  pyproject.toml
docs/source/: conf.py  howtouse.rst  index.rst  installation.rst  modules.rst  notion_mealplan.rst
notion_mealplan/: .gitignore  __init__.py  grocery_list.py  main.py  mp_functions.py  notion_filters.py  testing.py  units.py
tests/: test_grocery_list.py  test_mp_functions.py  tests.py
