[tool.poetry]
name = "notion-mealplan"
version = "0.1.0"
description = "A package that takes a Notion database of recipes and creates a customizable weekly meal plan"
authors = ["Jennifer Scora <jscora@sidratresearch.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
