[tool.poetry]
name = "notion-mealplan"
version = "0.1.0"
description = "A package that takes a Notion database of recipes and creates a customizable weekly meal plan"
authors = ["Jennifer Scora <jscora@sidratresearch.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
numpy = "^1.26.2"
ingredient-parser-nlp = "^0.1.0b7"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pytest = "^7.4.0"
sphinx = "^7.2.6"


[tool.poetry.group.-d.dependencies]
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
mealplan = "notion_mealplan:main.main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

